# polymind-bot

./: app.py  bot.py  models.json  pyproject.toml
.github/agents/: agent_rule.agent.md
.github/workflows/: ci.yml  quality.yml  release.yml
src/: logging_config.py
src/api/routes/: webapp.py  webapp_streaming.py
src/handlers/: message_handlers.py  model_fallback_handler.py  support_tool_call.py  text_handlers.py
src/handlers/commands/: basic_commands.py
src/services/: DeepSeek_R1_Distill_Llama_70B.py  ai_command_router.py  gemini_api.py  knowledge_graph.py  mcp_bot_integration.py  openrouter_api.py  openrouter_api_with_mcp.py  openrouter_api_with_mcp_improved.py
src/services/collaboration/: group_intelligence.py
src/services/group_chat/: ui_components.py
src/services/mcp/: mcp_client.py
src/services/memory_context/: memory_manager.py  model_history_manager.py  personalized_rag_system.py  rag_integration.py  text_handler_rag_patches.py
src/services/model_handlers/: __init__.py  model_configs.py  simple_api_manager.py
src/utils/docgen/: document_ai_generator.py
